--- a/zadanie 9/index.html
+++ b/zadanie 9/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div>
                     <button onclick="czysc()">WYCZYŚĆ</button>
-                    <button>REZERWUJ</button>
+                    <button type="submit">REZERWUJ</button>
                 </div>
             </div>
         </div>
