--- a/zadanie 9/restauracja.html
+++ b/zadanie 9/restauracja.html
@@ -36,19 +36,19 @@
                         <label for="a">Data (format: rrrr-mm-dd): </label>
                     </div>
                     <div>
-                        <input type="date" name="data_rez" id="a" required>
+                        <input type="date" name="data_rez" id="a" required />
                     </div>
                     <div>
                         <label for="b">Ile osób?: </label>
                     </div>
                     <div>
-                        <input type="number" name="ile osob" id="b" required>
+                        <input type="number" name="ilosc" id="b" required />
                     </div>
                     <div>
                         <label for="c">Twój numer telefonu: </label>
                     </div>
                     <div>
-                        <input type="number" name="tel" id="c" required>
+                        <input type="number" name="tel" id="c" required />
                     </div>
                     <div>
                         <input type="checkbox" id="v" class="czekbox">
