--- a/xzadanie 1 pow/index.html
+++ b/xzadanie 1 pow/index.html
@@ -12,6 +12,6 @@
         <input type="password" placeholder="HasŁo" name="hasŁo" required>
         <button>Zaloguj</button>
     </form>
-    <div class="ball"></div>
+    <div class="ball1"></div>
 </body>
 </html>
