--- a/xzadanie 8 pow/index.html
+++ b/xzadanie 8 pow/index.html
@@ -8,41 +8,43 @@
   </head>
   <body>
     <div class="baner">
-        <img src="klawiatura.jpg" alt="klawiatura">
+      <img src="klawiatura.jpg" alt="klawiatura" />
     </div>
     <div class="top">
-        <p class="p1"><a href="index.html">Strona glówna</a></p>
-        <p class="p2"><a href="koszt_rat">Koszt rat</a></p>
-        <p class="p3"><a href="nasz_partner">Nasz partner</a></p>
+      <p class="p1"><a href="index.html">Strona glówna</a></p>
+      <p class="p2"><a href="koszt_rat">Koszt rat</a></p>
+      <p class="p3"><a href="nasz_partner">Nasz partner</a></p>
+      <button id="dark-mode">dark mode</button>
     </div>
     <div class="mid">
-        <h2>Kursy komputerowe - programowanie</h2>
-        <table>
-            <tr>
-                <th>Nazwa</th>
-                <th>Liczba godzin</th>
-                <th>Cena</th>
-            </tr>
-            <tr>
-                <td>Kurs React.js</td>
-                <td>220</td>
-                <td>5000</td>
-            </tr>
-            <tr>
-                <td>Kurs JavaScript</td>
-                <td>150</td>
-                <td>3000</td>
-            </tr>
-        </table>
-        <h2>Adres do korespondencji</h2>
-        <ul>
-            <li>Adres: Katowice, ul. Mariacka 5</li>
-            <li>Telefon: 32 888 88 88</li>
-            <li><a href="kontakt">skontaktuj się</a></li>
-        </ul>
+      <h2>Kursy komputerowe - programowanie</h2>
+      <table>
+        <tr>
+          <th>Nazwa</th>
+          <th>Liczba godzin</th>
+          <th>Cena</th>
+        </tr>
+        <tr>
+          <td>Kurs React.js</td>
+          <td>220</td>
+          <td>5000</td>
+        </tr>
+        <tr>
+          <td>Kurs JavaScript</td>
+          <td>150</td>
+          <td>3000</td>
+        </tr>
+      </table>
+      <h2>Adres do korespondencji</h2>
+      <ul>
+        <li>Adres: Katowice, ul. Mariacka 5</li>
+        <li>Telefon: 32 888 88 88</li>
+        <li><a href="kontakt">skontaktuj się</a></li>
+      </ul>
     </div>
     <div class="stopka">
-        <p>Autor strony: 0000000000000</p>
+      <p>Autor strony: 0000000000000</p>
     </div>
+    <script src="skrypt.js"></script>
   </body>
 </html>
